--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
+		"@types/d3-scale": "^4.0.3",
 		"svelte": "^3.54.0",
 		"vite": "^4.0.0"
 	},
